Fixing expand/collapse for messages, individual and global behavior. Now the collpase.css and expand.css are no longer needed, just commentted those additions.

--- a/www/resources/forums.css
+++ b/www/resources/forums.css
@@ -26,10 +26,12 @@
         padding-top: 3px;
         padding-bottom: 3px;
         border: 0px;
+	display: inline;
 }
 
 #forum-thread .dyncollapsed {
         padding: 0px;
+	display: none;
 }
 
 #forum-thread .subject {
